--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "docker-compose -f docker-compose.yml -f docker-compose.http.yml up -d",
     "ssl": "docker-compose -f docker-compose.yml -f docker-compose.https.yml up -d",
-    "stop": "docker-compose down"
+    "stop": "docker-compose -f docker-compose.yml -f docker-compose.https.yml down"
   },
   "repository": {
     "type": "git",
