--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,13 @@ http {
     listen [::]:80 default_server ipv6only=on;
     listen 443 ssl http2;
 
+    client_max_body_size 200M;
+    client_header_timeout 3000;
+    client_body_timeout 3000;
+    fastcgi_read_timeout 3000;
+    fastcgi_buffers 8 128k;
+    fastcgi_buffer_size 128k;
+
     ssl on;
     ssl_certificate     /etc/nginx/server.crt;
     ssl_certificate_key /etc/nginx/server.key;
@@ -34,6 +41,10 @@ http {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-Proto https;
     proxy_http_version 1.1;
+    proxy_connect_timeout       600;
+    proxy_send_timeout          600;
+    proxy_read_timeout          600;
+    send_timeout                600;
 
     location / {
         proxy_redirect off;
